--- a/analysis/Q2b-TF-Binding-to-DE-genes.Rmd
+++ b/analysis/Q2b-TF-Binding-to-DE-genes.Rmd
@@ -273,6 +273,7 @@ TSS_distances_xlim <- ggarrange(min_dist_xlim, min_dist2_xlim, ncol=1)
 TSS_distances_xlim
 
 ggsave(filename="../docs/assets/Q2_5_TSS_distances_xlim2500_2h.png", TSS_distances_xlim)
+ggsave(filename="../docs/00_paper_figures/6b_2h.png", TSS_distances_xlim)
 ```
 
 
