--- a/analysis/Q4-GR-binding-PROTAC-genes.Rmd
+++ b/analysis/Q4-GR-binding-PROTAC-genes.Rmd
@@ -79,7 +79,7 @@ plt_gr_binding <- ggplot(kh.protac.sig) +
 
 plt_gr_binding
 
-ggsave(file="../docs/assets/Q4_1_kh_gr_binding.png", plt_gr_binding)
+ggsave(file="../docs/assets/Q4_1_kh_gr_binding.pdf", plt_gr_binding)
 ```
 
 # Plot signal tracks 
@@ -98,7 +98,7 @@ tracks <-  list("2h-DEX"="../data/reddy_bigwig_DEX2h_r123.bigWig",
                 "12h-DEX"="../data/reddy_bigwig_DEX12h_r123.bigWig")
 signals <- signal2Matrix(tracks, peaks13g, w=5, extend=500)
 
-png(file="../docs/assets/Q4_2_kh_peak_tracks.png", width=12,height=7,units="in",res=1200)
+pdf(file="../docs/assets/Q4_2_kh_peak_tracks.pdf", width=12,height=7,units="in",res=1200)
 h1 <- plotEnrichedHeatmaps(signals, show_row_names=TRUE, row_names_side="left", row_order=order(rownames(signals[["2h-DEX"]]))) #, left_annotation=peaks13g$nearestTSS.gene_name)#, width=unit(12, "cm"))
 h1
 dev.off()
@@ -118,7 +118,7 @@ mygenes.tss <-  resize(mygenes.transcripts, width=2000, fix='start')
 seqlevelsStyle(mygenes.tss) <- "UCSC"
 
 signals2 <- signal2Matrix(tracks, mygenes.tss, w=10, extend=10000)
-png(file="../docs/assets/Q4_3_kh_all_txs.png", width=12,height=7,units="in",res=1200)
+pdf(file="../docs/assets/Q4_3_kh_all_txs.pdf", width=12,height=7,units="in",res=1200)
 h2 <- plotEnrichedHeatmaps(signals2) #, left_annotation=peaks13g$nearestTSS.gene_name)#, width=unit(12, "cm"))
 h2
 dev.off()
@@ -136,7 +136,7 @@ mygenes_unique <- mygenes.tss[!duplicated(mygenes.tss$gene_name),]
 names(mygenes_unique) <- mygenes_unique$gene_name
 signals3 <- signal2Matrix(tracks, mygenes_unique, w=10, extend=10000)
 
-png(file="../docs/assets/Q4_4_kh_unique_gene_tss.png", width=12,height=7,units="in",res=1200)
+pdf(file="../docs/assets/Q4_4_kh_unique_gene_tss.pdf", width=12,height=7,units="in",res=1200)
 h3 <- plotEnrichedHeatmaps(signals3, show_row_names=TRUE, row_names_side="left", row_order=order(rownames(signals3[["2h-DEX"]]))) 
 h3
 dev.off()
