--- a/analysis/Q1b-Gene-overlap-2h.Rmd
+++ b/analysis/Q1b-Gene-overlap-2h.Rmd
@@ -239,8 +239,8 @@ myCol <- RColorBrewer::brewer.pal(4, "Pastel2")
 venn.diagram(
   x = list(ours_up, ours_down, reddy_up, reddy_down),
   category.names = c("Mahshid up" , "Mahshid down", "Reddy up", "Reddy down"),
-  filename = '../docs/assets/1_venn_diagram_2h.png',
-  imagetype="png",
+  filename = '../docs/assets/1_venn_diagram_2h.pdf',
+  imagetype="pdf",
   output=FALSE,
   disable.logging=TRUE,
   # Circles
@@ -260,10 +260,10 @@ venn.diagram(
 )
 ```
 ```{bash, engine.opts='-l'}
-cp ../docs/assets/1_venn_diagram_2h.png ../docs/00_paper_figures/6b_venn.png
+cp ../docs/assets/1_venn_diagram_2h.pdf ../docs/00_paper_figures/6a2_venn.pdf
 ```
 
-![](assets/1_venn_diagram_2h.png)
+![](assets/1_venn_diagram_2h.pdf)
 
 ### Plot logFCs for both experiments for DE gene union
 
@@ -289,7 +289,7 @@ plot_lfc <- ggplot(d_plot) +
        x="logFC Mahshid", y="logFC Reddy")
 plot_lfc
 
-ggsave(file="../docs/assets/2_logFC_Mahshid_Reddy_2h.png", plot_lfc)
+ggsave(file="../docs/assets/2_logFC_Mahshid_Reddy_2h.pdf", plot_lfc)
 ```
 
 # Save data
