--- a/analysis/Q2-TF-Binding-to-DE-genes.Rmd
+++ b/analysis/Q2-TF-Binding-to-DE-genes.Rmd
@@ -163,9 +163,9 @@ combined_plot
 Save plots
 
 ```{r}
-ggsave(file="../docs/assets/Q2_1_pvalue_dist.png", plt_value)
-ggsave(file="../docs/assets/Q2_2_logfc_dist.png", plt_logfc)
-ggsave(file="../docs/assets/Q2_3_mahshid_reddy.png", combined_plot, width=12, height=8)
+ggsave(file="../docs/assets/Q2_1_pvalue_dist.pdf", plt_value)
+ggsave(file="../docs/assets/Q2_2_logfc_dist.pdf", plt_logfc)
+ggsave(file="../docs/assets/Q2_3_mahshid_reddy.pdf", combined_plot, width=12, height=8)
 ```
 
 # Boxplot: Distribution of logFC by number of nearby GR-peaks
@@ -216,7 +216,7 @@ boxplot <- ggarrange(
   ncol=1)
 boxplot
 
-ggsave(filename="../docs/assets/Q2_4_boxplots.png", boxplot, width=14, height=10, unit="in")
+ggsave(filename="../docs/assets/Q2_4_boxplots.pdf", boxplot, width=14, height=10, unit="in")
 ```
 
 
@@ -263,7 +263,7 @@ min_dist2 <- plt_data %>%
 TSS_distances <- ggarrange(min_dist, min_dist2, ncol=1)
 TSS_distances
 
-ggsave(filename="../docs/assets/Q2_5_TSS_distances.png", TSS_distances)
+ggsave(filename="../docs/assets/Q2_5_TSS_distances.pdf", TSS_distances)
 ```
 
 ```{r, fig.width=14, fig.height=18}
@@ -286,8 +286,8 @@ min_dist2_xlim <- plt_data %>%
 TSS_distances_xlim <- ggarrange(min_dist_xlim, min_dist2_xlim, ncol=1)
 TSS_distances_xlim
 
-ggsave(filename="../docs/assets/Q2_5_TSS_distances_xlim2500.png", TSS_distances_xlim)
-ggsave(filename="../docs/00_paper_figures/6b_12h.png", TSS_distances_xlim)
+ggsave(filename="../docs/assets/Q2_5_TSS_distances_xlim2500.pdf", TSS_distances_xlim)
+ggsave(filename="../docs/00_paper_figures/6b_12h.pdf", TSS_distances_xlim)
 ```
 
 
@@ -338,7 +338,7 @@ group_image2 <- ggarrange(
   ncol=1)
 group_image2
 
-ggsave(filename="../docs/assets/Q2_6_boxplots_class.png", group_image2, width=14, height=10, unit="in")
+ggsave(filename="../docs/assets/Q2_6_boxplots_class.pdf", group_image2, width=14, height=10, unit="in")
 ```
 
 # Save excel 
