--- a/analysis/Q1-Gene-overlap.Rmd
+++ b/analysis/Q1-Gene-overlap.Rmd
@@ -20,6 +20,9 @@ suppressPackageStartupMessages({
   library(hrbrthemes)
 })
 
+hrbrthemes::import_roboto_condensed()
+extrafont::loadfonts()
+
 source("../code/helper_functions.R")
 ```
 
@@ -254,8 +257,8 @@ myCol <- RColorBrewer::brewer.pal(4, "Pastel2")
 venn.diagram(
   x = list(ours_up, ours_down, reddy_up, reddy_down),
   category.names = c("Mahshid up" , "Mahshid down", "Reddy up", "Reddy down"),
-  filename = '../docs/assets/1_venn_diagram.pdf',
-  imagetype="pdf",
+  filename = '../docs/assets/1_venn_diagram.tiff',
+  imagetype="tiff",
   output=FALSE,
   disable.logging=TRUE,
   # Circles
@@ -276,11 +279,11 @@ venn.diagram(
 ```
 
 ```{bash, engine.opts='-l'}
-cp ../docs/assets/1_venn_diagram.pdf ../docs/00_paper_figures/6a1_venn.pdf
+cp ../docs/assets/1_venn_diagram.tiff ../docs/00_paper_figures/6a1_venn.tiff
 ```
 
 
-![](assets/1_venn_diagram.pdf)
+![](assets/1_venn_diagram.tiff)
 
 ### Plot logFCs for both experiments for DE gene union
 
